--- a/package.json
+++ b/package.json
@@ -19,8 +19,14 @@
     "eslint-plugin-standard": "3.0.1",
     "htmlhint": "0.9.13",
     "husky": "0.14.3",
+    "nodemon": "^1.12.1",
     "npm-run-all": "4.1.1",
     "stylelint": "8.0.0",
     "stylelint-config-standard": "17.0.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "mongodb": "^2.2.33"
   }
 }
