--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "start": "node index.js",
+    "watch": "nodemon index.js",
     "lint": "run-p lint:*",
     "lint:html": "htmlhint ./**/*.html",
     "lint:css": "stylelint ./**/*.css",
